Revision history for Database-Abstraction

0.33
	Start to all undef to search for IS NULL

0.32	Tue Sep 16 08:26:41 EDT 2025
	Fix fast track return in selectall_arrayref

0.31	Mon Sep 15 20:15:00 EDT 2025
	Call sth->finish() when needed
	selectall_arrayref was setting an extra level of reference
	Added the test dashboard

0.30	Sun Aug 24 15:11:14 EDT 2025
	slurp mode - remove a data copy
	selectall_hashref now returns undef if there are no matches
	rewrote selectall_hashref to not just call selectall_hash, that saves data copying
	Imply 'entry' argument when possible
	Added the _fatal method
	selectall_hashref name is misleading, will be selectall_arrayref
	selectall_hash name is misleading, will be selectall_array
	Fix potential memory leak issues

0.29	Mon Aug 18 21:42:25 EDT 2025
	Moved the test data from data to t/data
	Fixed wildcard usage determination
	Optimise SQLite Pragmas
	Removed data copy when slurping XML with no_entry set
	Selectall_hashref - remove data copy
	Reduce chance of cache key name clash

0.28	Wed Aug  6 19:46:59 EDT 2025
	Added the import method
	Fix determination of BerkeleyDB
	Added BerkeleyDB test
	Increase SQLite timeout
	Added the count() method
	AUTOLOAD - sanity check on the column name

0.27	Sat Jun 14 20:56:27 EDT 2025
	Use Object::Configure rather than Class::Debug

0.26	Tue Apr 15 16:42:48 EDT 2025
	Added the 'no_fixate' option
	POC - fixate slurped data

0.25	Sun Apr 13 08:00:22 EDT 2025
	Fix auto_load calling unknown routine isFalse
	Removed _info and _notice as they're not used
	More extensive use of Params::Get to clean the code
	Added sanity test
	Allow subclasses to set max_slurp_size on open()
	Improved slurping of XML files - still needs more work
	Use Data::Reuse, but note RT#100461

0.24	Wed Mar 26 11:46:57 EDT 2025
	Added basic support for BerkeleyDBs (files ending in .db)
	If config_file has a section for this class, use that

0.23	Tue Mar 25 08:06:33 EDT 2025