@@ -61,8 +61,8 @@ WriteMakefile(
 		'File::Spec' => 0,
 		'File::pfopen' => 0.03,
 		'File::Temp' => 0,
-		'Log::Abstraction' => 0.24,
-		'Object::Configure' => 0.12,
+		'Log::Abstraction' => 0.26,
+		'Object::Configure' => 0.16,
 		'Params::Get' => 0.13,
 		'Scalar::Util' => 0,
 	}, dist => $dist,
