@@ -4,7 +4,7 @@ use strict;
 use FindBin qw($Bin);
 
 use File::Spec;
-use Test::Most tests => 24;
+use Test::Most tests => 25;
 use Test::NoWarnings;
 
 use lib 't/lib';
@@ -74,4 +74,5 @@ lives_ok(sub { $unknown = $test1->number('empty') }, 'AUTOLOAD survives empty co
 ok(!defined($unknown));
 
 # Test undef
-lives_ok(sub { my $res = $test1->fetchrow_hashref({ number => undef }) }, 'Undef can be used, will search IS NULL');
+lives_ok(sub { my $res = $test1->fetchrow_hashref({ number => undef }) }, 'fetchrow_hashref: undef can be used, will search IS NULL');
+lives_ok(sub { my @rc = $test1->selectall_hash(number => undef) }, 'selectall_hash: undef can be used, will search IS NULL');
